[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/editor/editor_main.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ocean_bg.jpg" type="Texture" id=3]
[ext_resource path="res://ui/util/drag_area.gd" type="Script" id=4]
[ext_resource path="res://ui/editor/origin_grid.gd" type="Script" id=5]
[ext_resource path="res://ui/editor/point_brush.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/editor/tile_brush.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/editor/harbor_brush.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/editor/save_popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/editor/open_popup.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/editor/data_config.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/editor/pool_config.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/editor/landform_brush.tscn" type="PackedScene" id=13]
[ext_resource path="res://shaders/button_highlight.gdshader" type="Shader" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

float circle(vec2 st) {
	st = st*2.0 - 1.0;
	return length(st);
}

void fragment() {
	COLOR = vec4(step(circle(UV), 1.0)) * MODULATE;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=35]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=33]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=23]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=34]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=25]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=26]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=27]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=28]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=32]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=31]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=36]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[sub_resource type="ShaderMaterial" id=37]
shader = ExtResource( 14 )
shader_param/highlight_color = Color( 0.0431373, 0.713726, 0.894118, 1 )
shader_param/is_highlight = false

[node name="EditorMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="DragArea" type="Node2D" parent="."]
script = ExtResource( 4 )
is_enable_wheel = true

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Quit" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -96.0
margin_right = 224.0
theme = ExtResource( 1 )
text = "退出"

[node name="Save" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -96.0
theme = ExtResource( 1 )
text = "保存"

[node name="Open" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -96.0
margin_right = -256.0
theme = ExtResource( 1 )
text = "打开"

[node name="CanvasBG" type="TextureRect" parent="."]
anchor_left = 0.135417
anchor_top = 0.135185
anchor_right = 0.8125
anchor_bottom = 0.863889
margin_bottom = 6.10352e-05
rect_clip_content = true
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OriginPoint" type="ColorRect" parent="CanvasBG"]
modulate = Color( 0.972549, 1, 1, 1 )
self_modulate = Color( 1, 0, 0, 1 )
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
color = Color( 0.588235, 0.588235, 0, 1 )

[node name="Grid" type="Node2D" parent="CanvasBG/OriginPoint"]
show_behind_parent = true
position = Vector2( 5, 5 )
script = ExtResource( 5 )

[node name="Tile" type="Node2D" parent="CanvasBG/OriginPoint"]
show_behind_parent = true
position = Vector2( 5, 5 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 66.0
theme_type_variation = "BigLabel"
text = "地图编辑器"
align = 1
valign = 1

[node name="Tiles" type="VBoxContainer" parent="."]
margin_top = 146.0
margin_right = 124.0
margin_bottom = 398.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Tiles"]
margin_right = 124.0
margin_bottom = 32.0
text = "地块"
align = 1
valign = 1

[node name="Con" type="GridContainer" parent="Tiles"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 307.0
mouse_filter = 0
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Mountain" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 51.0
hint_tooltip = "山脉"
pressed = true
tile_type = 4

[node name="Hill" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 124.0
margin_bottom = 51.0
hint_tooltip = "丘陵"
tile_type = 3

[node name="Forest" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 6 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 55.0
margin_right = 60.0
margin_bottom = 106.0
hint_tooltip = "森林"
tile_type = 6

[node name="Field" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 7 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 55.0
margin_right = 124.0
margin_bottom = 106.0
hint_tooltip = "平原"
tile_type = 2

[node name="Pasture" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 8 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 60.0
margin_bottom = 161.0
hint_tooltip = "牧场"

[node name="Gold" parent="Tiles/Con" instance=ExtResource( 7 )]
visible = false
material = SubResource( 35 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 110.0
margin_right = 124.0
margin_bottom = 161.0
hint_tooltip = "牧场"
tile_type = 8

[node name="Ocean" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 9 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 110.0
margin_right = 124.0
margin_bottom = 161.0
hint_tooltip = "海洋"
tile_type = 7

[node name="Desert" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 10 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 165.0
margin_right = 60.0
margin_bottom = 216.0
hint_tooltip = "沙漠"
tile_type = 1

[node name="Random" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 33 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 165.0
margin_right = 124.0
margin_bottom = 216.0
hint_tooltip = "随机地块"
tile_type = 9

[node name="Erase" parent="Tiles/Con" instance=ExtResource( 7 )]
material = SubResource( 11 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 60.0
margin_bottom = 271.0
hint_tooltip = "清除地块"
tile_type = 0

[node name="Point" type="VBoxContainer" parent="."]
margin_top = 460.0
margin_right = 124.0
margin_bottom = 876.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Point"]
margin_right = 124.0
margin_bottom = 32.0
text = "点数"
align = 1
valign = 1

[node name="Con" type="GridContainer" parent="Point"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 416.0
mouse_filter = 0
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Two" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 13 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 60.0
point_type = 2

[node name="Three" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 14 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
point_type = 3

[node name="Four" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 15 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 64.0
margin_right = 60.0
margin_bottom = 124.0
point_type = 4

[node name="Five" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 16 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 64.0
margin_right = 124.0
margin_bottom = 124.0
point_type = 5

[node name="Six" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 17 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 60.0
margin_bottom = 188.0
point_type = 6

[node name="Eight" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 19 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 128.0
margin_right = 124.0
margin_bottom = 188.0
point_type = 8

[node name="Nine" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 20 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 60.0
margin_bottom = 252.0
point_type = 9

[node name="Ten" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 21 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 192.0
margin_right = 124.0
margin_bottom = 252.0
point_type = 10

[node name="Eleven" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 22 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 256.0
margin_right = 60.0
margin_bottom = 316.0
point_type = 11

[node name="Twelve" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 23 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 256.0
margin_right = 124.0
margin_bottom = 316.0
point_type = 12

[node name="Random" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 34 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 320.0
margin_right = 60.0
margin_bottom = 380.0
hint_tooltip = "随机点数"
point_type = 13

[node name="Erase" parent="Point/Con" instance=ExtResource( 6 )]
material = SubResource( 24 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 320.0
margin_right = 124.0
margin_bottom = 380.0
hint_tooltip = "清除点数"

[node name="Harbor" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 146.0
margin_right = 252.0
margin_bottom = 398.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Harbor"]
margin_right = 124.0
margin_bottom = 32.0
text = "海港"
align = 1
valign = 1

[node name="Con" type="GridContainer" parent="Harbor"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 252.0
mouse_filter = 0
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Generic" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 25 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 51.0
harbor_type = 6

[node name="Lumber" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 26 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 124.0
margin_bottom = 51.0
harbor_type = 1

[node name="Brick" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 27 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 55.0
margin_right = 60.0
margin_bottom = 106.0
harbor_type = 2

[node name="Ore" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 28 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 55.0
margin_right = 124.0
margin_bottom = 106.0
harbor_type = 3

[node name="Wool" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 29 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 60.0
margin_bottom = 161.0
harbor_type = 4

[node name="Grain" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 30 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 110.0
margin_right = 124.0
margin_bottom = 161.0
harbor_type = 5

[node name="Random" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 32 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 165.0
margin_right = 60.0
margin_bottom = 216.0
hint_tooltip = "随机港口"
harbor_type = 7

[node name="Erase" parent="Harbor/Con" instance=ExtResource( 8 )]
material = SubResource( 31 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 165.0
margin_right = 124.0
margin_bottom = 216.0
hint_tooltip = "清除港口"

[node name="Landform" type="VBoxContainer" parent="."]
margin_left = 133.0
margin_top = 460.0
margin_right = 257.0
margin_bottom = 712.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Landform"]
margin_right = 124.0
margin_bottom = 32.0
text = "地形"
align = 1
valign = 1

[node name="Con" type="GridContainer" parent="Landform"]
margin_top = 36.0
margin_right = 124.0
margin_bottom = 96.0
mouse_filter = 0
columns = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Cloud" parent="Landform/Con" instance=ExtResource( 13 )]
material = SubResource( 36 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 60.0
margin_bottom = 60.0
hint_tooltip = "云雾"
landform_type = 2

[node name="Settlement" parent="Landform/Con" instance=ExtResource( 13 )]
material = SubResource( 37 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 124.0
margin_bottom = 60.0
hint_tooltip = "初始点位"
landform_type = 1

[node name="Info" type="VBoxContainer" parent="."]
anchor_left = 0.829167
anchor_top = 0.135185
anchor_right = 0.989583
anchor_bottom = 0.364815
margin_bottom = -128.0
custom_constants/separation = 15
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="Info"]
margin_right = 307.0
margin_bottom = 32.0
text = "信息"
align = 1
valign = 1

[node name="File" type="HBoxContainer" parent="Info"]
margin_top = 47.0
margin_right = 307.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="Info/File"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "当前文件:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Info/File"]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
align = 1
caret_blink = true

[node name="Expansion" type="HBoxContainer" parent="Info"]
margin_top = 104.0
margin_right = 307.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Info/Expansion"]
margin_top = 3.0
margin_right = 103.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "地图类型:"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="Info/Expansion"]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Data" type="HBoxContainer" parent="Info"]
margin_top = 157.0
margin_right = 307.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="Info/Data"]
margin_top = 3.0
margin_right = 103.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "地图数据:"
align = 1
valign = 1

[node name="OptionButton" type="Button" parent="Info/Data"]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "编辑"

[node name="Pool" type="HBoxContainer" parent="Info"]
margin_top = 210.0
margin_right = 307.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="Info/Pool"]
margin_top = 3.0
margin_right = 103.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "随机数据:"
align = 1
valign = 1

[node name="OptionButton" type="Button" parent="Info/Pool"]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "编辑"

[node name="VP" type="HBoxContainer" parent="Info"]
margin_top = 263.0
margin_right = 307.0
margin_bottom = 305.0

[node name="Label" type="Label" parent="Info/VP"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "胜利点数:"
align = 1
valign = 1

[node name="Edit" type="SpinBox" parent="Info/VP"]
margin_left = 107.0
margin_right = 307.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 2.0

[node name="OpenPopup" parent="." instance=ExtResource( 10 )]
visible = false

[node name="SavePopup" parent="." instance=ExtResource( 9 )]
popup_exclusive = true

[node name="DataConfig" parent="." instance=ExtResource( 11 )]
visible = false
popup_exclusive = true

[node name="PoolConfig" parent="." instance=ExtResource( 12 )]
popup_exclusive = true

[connection signal="mouse_moved" from="DragArea" to="." method="_on_mouse_moved"]
[connection signal="wheel_down" from="DragArea" to="." method="_on_wheel_down"]
[connection signal="wheel_up" from="DragArea" to="." method="_on_wheel_up"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_editor"]
[connection signal="button_down" from="Save" to="." method="_on_save_map"]
[connection signal="button_down" from="Open" to="." method="_on_open_map"]
[connection signal="item_selected" from="Info/Expansion/OptionButton" to="." method="_on_change_mode"]
[connection signal="button_down" from="Info/Data/OptionButton" to="." method="_on_edit_data"]
[connection signal="button_down" from="Info/Pool/OptionButton" to="." method="_on_edit_pool"]
[connection signal="value_changed" from="Info/VP/Edit" to="." method="_on_edit_vp"]
[connection signal="map_selected" from="OpenPopup" to="." method="_on_map_selected"]
[connection signal="map_saved" from="SavePopup" to="." method="_on_map_saved"]
[connection signal="config_done" from="DataConfig" to="." method="_on_data_edit_done"]
[connection signal="config_done" from="PoolConfig" to="." method="_on_pool_edit_done"]
